<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_generator_c</name>
  <version>4.0.0</version>
  <description>Generate the ROS interfaces in C.</description>

  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <depend>nlohmann_json</depend>
  <depend>fmt</depend>
  <depend>rosidlcpp_parser</depend>
  <depend>rosidlcpp_generator_core</depend>

  <build_export_depend>rosidl_cmake</build_export_depend>
  <build_export_depend>rosidl_generator_type_description</build_export_depend>
  <build_export_depend>rosidl_typesupport_interface</build_export_depend>
  <build_export_depend>rcutils</build_export_depend>

  <test_depend>ament_gtest</test_depend>


  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
