<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_generator_cpp</name>
  <version>0.0.0</version>
  <description>This is a C++ reimplementation of the rosidlcpp_generator_cpp package</description>
  <maintainer email="tony.welte@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <depend>rosidlcpp_parser</depend>

  <build_export_depend>rosidl_cmake</build_export_depend>
  <!-- This is needed for the rosidl_message_type_support_t struct and visibility macros -->
  <build_export_depend>rosidlcpp_generator_c</build_export_depend>
  <build_export_depend>rosidl_runtime_cpp</build_export_depend>

  <test_depend>ament_gtest</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
